# automl-pipeline-optimizer

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
scripts/: verify_package.py
src/automl_pipeline/: __init__.py  binning.py  cli.py  config.py  config_validator.py  cross_validation.py  data.py  ensemble.py  evaluation.py  feature_selection.py  features.py  imbalance.py  models.py  optimization.py  outliers.py  persistence.py  pipeline.py  preprocessing.py  profiling.py  report.py  robust_scaler.py  target_encoder.py
tests/: __init__.py  conftest.py  test_binning.py  test_cli.py  test_config_validator.py  test_cross_validation.py  test_data.py  test_data_edge.py  test_ensemble.py  test_evaluation.py  test_feature_selection.py  test_features.py  test_imbalance.py  test_models.py  test_optimization.py  test_persistence.py  test_pipeline.py  test_preprocessing.py  test_profiling.py  test_report.py  test_robust_scaler.py  test_target_encoder.py
