[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl-pipeline-optimizer"
version = "0.1.0"
description = "Automated ML pipeline optimization: preprocessing, model selection, hyperparameter tuning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Muhtasim Munif Fahim", email = "s1911024120@ru.ac.bd" },
]
keywords = ["automl", "machine-learning", "pipeline", "optimization"]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
